# django_hwproject

./: .env.sample  README.md  catalog_fixture.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: article_confirm_delete.html  article_detail.html  article_list.html  base.html
catalog/: models.py  urls.py  views.py
catalog/management/commands/: add_products.py
catalog/migrations/: 0001_initial.py  0002_alter_category_options_alter_product_options_and_more.py  0003_contact.py
catalog/templates/: base.html  contacts.html  home.html  products_detail.html  products_list.html  test_form.html
catalog/templates/catalog/: base.html  contacts.html  nav_menu.html  product_detail.html  product_list.html
catalog/templates/includes/: nav_menu.html
config/: settings.py  urls.py
